# hoff

./: .git-blame-ignore-revs  cabal.project  cabal.project.freeze  changelog.md  default.nix  fourmolu.yaml  hoff.cabal  hoff.nix  readme.md  stack.yaml  weeder.toml
.semaphore/: prologue.sh  semaphore.yml
app/: Main.hs
doc/: example-dev-config.json
nix/: haskell-overlay.nix  sources.json
package/: example-config.json
src/: AlembicRebase.hs  ClockTickLoop.hs  Configuration.hs  EventLoop.hs  Format.hs  Git.hs  Github.hs  GithubApi.hs  Logic.hs  Metrics.hs  MonadLoggerEffect.hs  Parser.hs  Parser2.hs  Project.hs  Server.hs  Time.hs  Types.hs  WebInterface.hs
src/Metrics/: Metrics.hs  Server.hs
static/: script.js  style.css
tests/: AlembicRebaseSpec.hs  EndToEnd.hs  EventLoopSpec.hs  ParserSpec.hs  ProjectSpec.hs  ServerSpec.hs  Spec.hs
tests/data/: alembic-first.py  alembic-with-down.py  push-payload.json
